Add Manet Manager as library and begin its integration